Fixed key capitalization

--- a/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
+++ b/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
@@ -31,7 +31,7 @@ to if we had a "Tip of the Day" facility).]</p><p></p>
 	<tbody>
 		<tr>
 			<td width="20%" valign="top" align="right"><b>Code assist</b></td>
-			<td valign="top" align="left" width="80%">Hit <b>CTRL+SPACE (Edit
+			<td valign="top" align="left" width="80%">Hit <b>Ctrl + SPACE (Edit
 			/ Content Assist)</b> in the Java editor to ask for suggestions
 			for how to finish what you're typing.
 
@@ -45,7 +45,7 @@ to if we had a "Tip of the Day" facility).]</p><p></p>
 		<tr>
 			<td width="20%" valign="top" align="right"><b>Parameter Hints</b></td>
 			<td valign="top" align="left" width="80%">In the Java Editor hit
-			CTRL+SHIFT + SPACE (Edit / Parameter Hints) in method arguments to
+			Ctrl + Shift + SPACE (Edit / Parameter Hints) in method arguments to
 			get parameter hints.<br>
 			<img border="0" src="images/parameter-hints.gif" width="477"
 				height="73" alt="Parameter Hint Hover">
@@ -55,7 +55,7 @@ to if we had a "Tip of the Day" facility).]</p><p></p>
 			<td width="19%" valign="top" align="right"><b>Code assist on
 			anonymous classes</b></td>
 			<td valign="top" align="left" width="81%">Code assist gives help when
-			creating an anonymous class. Invoke <b>Edit / Content Assist (CTRL
+			creating an anonymous class. Invoke <b>Edit / Content Assist (Ctrl
 			+ SPACE)</b> after the opening bracket of the class instance creation<br>
 			<img border="0" src="images/code-assist-anonym.gif" width="421"
 				height="89" alt="Code Assist for a Anonymous Class"><br>
@@ -77,8 +77,8 @@ to if we had a "Tip of the Day" facility).]</p><p></p>
 				existing method</li>
 				<li>Define a new template <b>(Preferences / Java / Editor /
 				Templates)</b> containing a method stub. Templates are shown
-				together with the <b>Code Assist (CTRL + SPACE)</b> proposals.</li>
-				<li>Start with the method invocation and use <b>Quick Fix (CTRL + 1)</b>
+				together with the <b>Code Assist (Ctrl + SPACE)</b> proposals.</li>
+				<li>Start with the method invocation and use <b>Quick Fix (Ctrl + 1)</b>
 				to create the method.<br>
 				<img border="0" src="images/quick-fix-create-method.gif" alt="Create Method Quick Fix">
 				</li>
@@ -94,7 +94,7 @@ to if we had a "Tip of the Day" facility).]</p><p></p>
 				<li>Select the type to add the methods to and invoke <b>'Override /
 				Implement Methods'</b>, from the source or context menu. This opens
 				a dialog that lets you choose which methods to override.</li>
-				<li>Invoke <b>Code Assist (CTRL + SPACE)</b> in the type body at the
+				<li>Invoke <b>Code Assist (Ctrl + SPACE)</b> in the type body at the
 				place where the method should be added. Code assist will offer all
 				methods that can be overwritten. A method body for the chosen method will be created.<br>
 				<img border="0" src="images/code-assist-newmethod.gif" width="433"
@@ -104,7 +104,7 @@ to if we had a "Tip of the Day" facility).]</p><p></p>
 				first to the type. Without the need to save or build, the Java
 				editor will underline the type to signal that methods are missing
 				and show the Quick fix light bulb. Click on the light bulb or press
-				<b>CTRL + 1 (Edit / Quick Fix)</b> to choose between adding the
+				<b>Ctrl + 1 (Edit / Quick Fix)</b> to choose between adding the
 				unimplemented methods or making your class abstract.<br>
 				<img border="0"
 					src="images/quick-fix-unimplemented-methods.gif" alt="Quick Fix offering 'Add unimplemented methods' proposal"></li>
@@ -131,7 +131,7 @@ to if we had a "Tip of the Day" facility).]</p><p></p>
 			easy. Unhandled exceptions are detected while typing and marked with
 			a red line in the editor. 
 			<ul>
-				<li>Click on the light bulb or press CTRL + 1 to surround the call
+				<li>Click on the light bulb or press Ctrl + 1 to surround the call
 				with a try catch block. If you want to include more statements in
 				the try block, select the statements and use (<b>Source /
 				Surround With try/catch Block</b>).
@@ -170,7 +170,7 @@ to if we had a "Tip of the Day" facility).]</p><p></p>
 		</tr>
 		<tr>
 			<td valign="top" align="right"><b>Surround lines</b></td>
-			<td valign="top" width="504">To surround statements with an if / while / for or other blocks, select the lines to surround and invoke <b>CTRL
+			<td valign="top" width="504">To surround statements with an if / while / for or other blocks, select the lines to surround and invoke <b>Ctrl
 			+ 1 (Edit / Quick Fix)</b>. This lists all templates that contain the variable ${line_selection}<br>
 			Templates are configured on <b>Window / Preferences / Java / Editor /
 			Templates</b><br>
@@ -178,7 +178,7 @@ to if we had a "Tip of the Day" facility).]</p><p></p>
 		</tr>
 		<tr>
 			<td valign="top" align="right"><b>Remove surrounding statement</b></td>
-			<td valign="top" width="504">To remove a surrounding statement or block position the cursor at the opening bracket at invoke <b>CTRL
+			<td valign="top" width="504">To remove a surrounding statement or block position the cursor at the opening bracket at invoke <b>Ctrl
 			+ 1 (Edit / Quick Fix)</b>.<br>
 			<img border="0" src="images/quick-assist-remove-surrounding.gif"
 				width="408" height="100"></td>
