--- a/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
+++ b/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
@@ -361,11 +361,12 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
   </TR>
   <TR>
     <TD vAlign=top align=left width="30%"><b>Quick assist</b></TD>
-    <TD vAlign=top width="70%">Hitting CTRL + 1 in the Java editor when the quick 
+    <TD vAlign=top width="70%">Hitting Ctrl + 1 in the Java editor when the quick 
       fix icon (yellow light bulb) is showing brings up the menu of available 
       quick fixes. This provides an easy way to declare new local variables, parameters, 
       and fields without having to break stride.</TD>
   </TR>	
+
   <TR>
     <TD vAlign=top colSpan=2><HR></TD>
   </TR>
@@ -433,7 +434,7 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
   <TR>
     <TD vAlign=top align=left width="30%"><b>Hyperlinked Java code</b></TD>
     <TD vAlign=top width="70%"> 
-      <p>While hovering over Java code, pressing the CTRL key and moving the mouse 
+      <p>While hovering over Java code, pressing the Ctrl key and moving the mouse 
         turns class, method, and field identifiers into clickable links to the 
         corresponding declaration. This option can be confugured via the <b>Java 
         / Editor / Navigation</b> panel.</p>
@@ -446,8 +447,8 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
   </TR>
   <TR>
     <TD vAlign=top align=left width="30%"><b>Scroll to the next member</b></TD>
-    <TD vAlign=top width="70%">Use CTRL + SHIFT+ Arrow Down(<strong>Navigate &gt; 
-      Go To &gt; Next Member</strong>) and CTRL + SHIFT + Arrow Up (<strong>Navigate 
+    <TD vAlign=top width="70%">Use Ctrl + Shift + Arrow Down(<strong>Navigate &gt; 
+      Go To &gt; Next Member</strong>) and Ctrl + Shift + Arrow Up (<strong>Navigate 
       &gt; Go To &gt; Previous Member</strong>) in the Java editor to quickly 
       navigate between member methods, fields, initializers, and types. </TD>
   </TR>	
@@ -633,8 +634,8 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
       <UL>
         <LI><font face="Verdana" size="2">Push it down to subclasses, or</font> 
         <LI><FONT face=Verdana size=2>(In the case of methods) push it down to 
-          subclasses and declare an abstract method in the class that currently 
-          declares the method, or</FONT> 
+        subclasses and declare an abstract method in the class that currently 
+        declares the method, or</FONT> 
         <LI><font face="Verdana" size="2">Leave it as is</font> </LI>
       </UL>
       <P align=center><FONT face=Verdana size=2><IMG 
@@ -855,7 +856,7 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
       (<b>Java / Compiler</b>), you can now configure these for a specific Java 
       project through the new Java Compiler property page on each Java project.</TD>
   </TR>	
-    <TR>
+  <TR>
     <TD vAlign=top colSpan=2>
       <HR>
     </TD></TR>
@@ -871,7 +872,7 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
         and subpackages as siblings.</FONT> </p>
       <p><img src="images/hierarchical_layout.gif" width="329" height="220"> </p>
     </TD></TR>
-	    <TR>
+ <TR>
     <TD vAlign=top colSpan=2>
       <HR>
     </TD></TR>
@@ -906,9 +907,7 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
       </UL>
       <P align=center><FONT face=Verdana size=2><IMG height=291 
       src="images/buildPathUI.gif" width=408> </FONT></P></TD></TR>
-
-
-  <TR>
+    <TR>
     <TD colSpan=2>
       <HR>
     </TD></TR>
