--- a/bundles/org.eclipse.platform.doc.user/whatsNew/platform_whatsnew.html
+++ b/bundles/org.eclipse.platform.doc.user/whatsNew/platform_whatsnew.html
@@ -47,7 +47,7 @@ size throughout.]</p>
       navigation history. If you open a second editor while you're editing away,
       you can use <b>Navigate &gt; Back</b> to get back, or press the back
       button on the workbench toolbar. The back button on your mouse also does
-      the trick as along as it sends the standard ALT+LeftArrow key sequence.
+      the trick as along as it sends the standard Alt + Left Arrow key sequence.
       <p align="center"><img border="0" src="images/navigate-back.gif" width="396" height="176"></p>
     </td>
   </tr>
