*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-34a.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-34a.htm
@@ -8,9 +8,9 @@
 </HEAD>
 
 <BODY BGCOLOR="#ffffff">
-<H1>Installing new features with the update manager</H1>
+<H1>Installing several features at once using group updates</H1>
 
-<p>To locate and install a new feature into a product (ordinarily requires web 
+<p>To install several features at once using update manager (ordinarily requires web 
   access):
 </p>
 
@@ -28,18 +28,29 @@
     contact the web site to discover what features are available.</li>
   <li>Expand one of the top-level categories and select a feature. Information
     about that feature appears in the Preview view.</li>
-  <li>After selecting the feature to be added, click the <b>Install</b> button
-    within the Preview view.</li>
-  <li>The Feature Install wizard confirms the details of the feature you are
-    about to install. Click <b>Next</b>.</li>
+  <li>After selecting the feature to be added, locate section in the Preview
+    view with a title <b>Group Updates</b> and check the &quot;Install by adding
+    to the Selected Updates&quot; checkbox.</li>
+  <li>Repeat for every feature you want to install. At any point, you can
+    inspect the selection by pressing &quot;Selected Updates&quot; hyperlink to
+    the right of the checkbox, or by bringing the Selected Updates view to the
+    top (by default, it is stacked with the Install Configuration view).</li>
+  <li>When all the features that are to be installed are selected, switch to the
+    Selected Updates view, bring up the pop-up menu and select <b>Process All</b>
+    item. If you change your mind about any feature, you can remove it from the
+    list prior to processing.</li>
+  <li>The Feature Install wizard confirms the details of the features you are
+    about to install. Note that there may be conflicts between features you have
+    selected. You will be informed about them and asked to deselect the ones
+    causing the conflict. Click <b>Next</b>.</li>
   <li>Carefully review the license agreements for the upgraded features. If the
     terms of all these licenses are acceptable, check &quot;I accept the terms
     in the license agreements&quot;. Do not proceed to download the features if
     the license terms are not acceptable.</li>
-  <li>If a feature selected for install include optional features, a page will
-    show up allowing you to select whether you want them installed or not.
-    Optional features typically carry functionality that is not essential for
-    proper functioning of the main feature.</li>
+  <li>If one or more features selected for install include optional features, a
+    page will show up allowing you to select whether you want them installed or
+    not. Optional features typically carry functionality that is not essential
+    for proper functioning of the main feature.</li>
   <li>The Install Location page controls where the new feature's files are to be
     installed on the local computer. Select the directory into which the product
     is installed and hit <b>Next</b>. (If the product is installed in a
@@ -70,8 +81,8 @@
 <P>
 <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
 <a href="tasks-33.htm">Inspecting the current configuration</a><br>
-<a href="tasks-36.htm">Updating Eclipse with the update manager</a><br>
-<a href="tasks-34a.htm">Installing several features at once using group updates</a><br>
+<a href="tasks-36.htm">Updating Eclipse with the update manager<br>
+</a><a href="tasks-34.htm">Installing new features with the update manager</a><br>
 <a href="tasks-36a.htm">Searching for features</a><br>
 <a href="tasks-37.htm">Saving a configuration</a><br>
 <a href="tasks-38.htm">Restoring a saved configuration</a>
