*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-25.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-25.htm
@@ -40,6 +40,20 @@ formulating a configuration incrementally newer than the current one. Important
 configurations can be saved and restored to active service in the
 event of an unsuccessful upgrade.</p>
 
+<p>Large Eclipse based products can organize its features into trees starting
+from the root feature that represents the entire product. This root feature then
+includes smaller units of functionality all the way down to leaf features that
+list one or more plug-ins and fragments. The capability to group feature
+hierarchically allows products to be stacked using 'Russian doll' approach - a
+large product can build on top of a smaller one by including it and adding more
+features.</p>
+
+<p>Some included features may not be useful add-ons but not vital to the proper
+functioning of the overall product. Feature providers can elect to mark them as <b>optional</b>.
+When installing optional features, users are provided with a choice over whether
+they want them or not. If not installed right away, optional features can be
+added at a later date.</p>
+
 <p>The <b>About</b> option on the <b>Help</b> menu provides information about installed features and plug-ins. 
 The <b>Software Updates</b> submenu on the <b>Help</b> menu groups together items for updating existing features, and 
 for finding, downloading, and installing new features.
@@ -53,6 +67,7 @@ for finding, downloading, and installing new features.
 <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
 <br><a href="../tasks/tasks-33.htm">Inspecting the current configuration</a>
 <br><a href="../tasks/tasks-34.htm">Installing new features with the update manager</a>
+<br><a href="../tasks/tasks-34a.htm">Installing several features at once using group updates</a>
 <br><a href="../tasks/tasks-35.htm">Picking up pending changes</a>
 <br><a href="../tasks/tasks-36.htm">Updating Eclipse with the update manager</a>
 <br><a href="../tasks/tasks-37.htm">Saving a configuration</a>
