--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-34a.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-34a.htm
@@ -4,7 +4,7 @@
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Installing new features with the update manager</title>
+<title>Installing several features at once using group updates</title>
 </HEAD>
 
 <BODY BGCOLOR="#ffffff">
