first pass over "concepts"

--- a/bundles/org.eclipse.jdt.doc.user/concepts/cbuildcp.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/cbuildcp.htm
@@ -13,15 +13,15 @@
     <h1>Build classpath</h1>
 
     <p>The build classpath is the path which is used to find classes that are
-    referenced by your source code.&nbsp; During compilation, this path is used
-    to search for classes outside of your project.&nbsp; The build classpath is
-    specified for each project.&nbsp; In the project properties, it is referred
+    referenced by your source code. During compilation, this path is used
+    to search for classes outside of your project. The build classpath is
+    specified for each project. In the project properties, it is referred
     to as the &quot;Java Build Path.&quot;</p>
 
     <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-     <a href="concepts-4.htm">Java builder</a> <a href="cclsspthv.htm"><br>
-     Java development tools (JDT)<br>
-     Classpath variable</a></p>
+     <a href="concepts-4.htm">Java builder</a><br>
+     <a href="cclsspthv.htm">Classpath variable</a>
+    </p>
 
     <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
      <a href="../tasks/tasks-113.htm">Adding a JAR file to the build path</a><br>
