--- a/bundles/org.eclipse.jdt.doc.user/concepts/cclsspthv.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/cclsspthv.htm
@@ -13,14 +13,14 @@
     <h1>Classpath variables</h1>
 
     <p>The build path for a Java project can include source code files, other
-    Java projects, and JAR files.&nbsp; JAR files can be specified using file
+    Java projects, and JAR files. JAR files can be specified using file
     system paths, or by using variables that refer to locations on the
-    network.&nbsp;&nbsp;</p>
+    network.&nbsp;</p>
 
-    <p>Classpath variables allow you avoid references to the location of a JAR
-    file on your local file system.&nbsp; By using a classpath variable, you can
+    <p>Classpath variables allow you to avoid references to the location of a JAR
+    file on your local file system. By using a classpath variable, you can
     specify a JAR file or library using only a variable name, such as JRE_LIB,
-    rather than specifying the location of the JRE on your workstation.&nbsp; In
+    rather than specifying the location of the JRE on your workstation. In
     this way, you can share build paths across teams and define the variables to
     refer to the correct location for your particular computer.</p>
 
