--- a/bundles/org.eclipse.jdt.doc.user/concepts/cnls.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/cnls.htm
@@ -12,9 +12,9 @@
     <h1>String externalization</h1>
 
     <p>The Java tools help you to develop applications that can be run on
-    international platforms.&nbsp; An important facet of designing a program for
+    international platforms. An important facet of designing a program for
     use in different countries is the localization, or externalization, of text
-    that is displayed by the program.&nbsp; By externalizing strings, the text
+    that is displayed by the program. By externalizing strings, the text
     can be translated for different countries and languages without rebuilding
     the Java program.</p>
 
@@ -22,10 +22,10 @@
 
     <ul>
       <li>
-        A compiler option lets you mark not-externalized strings as compile-time warnings or errors. 
+        A compiler option lets you mark non-externalized strings as compile-time warnings or errors. 
 
         <ul>
-          <li>See the <span class="control">Window &gt; Preferences &gt; Java &gt; Compiler &gt; Errors and Warnings &gt; Not-externalized strings</span> preference</li>
+          <li>See the <span class="control">Window &gt; Preferences &gt; Java &gt; Compiler &gt; Problems &gt; Usage of non-externalized strings</span> preference</li>
         </ul>
       </li>
 
@@ -39,7 +39,8 @@
     </ul>
 
     <p>Comments can be used to denote strings that should not be externalized
-    and should not result in compile-time warnings or errors.&nbsp; These comments are of form <code>//$NON-NLS-n$</code> where n is the 1-based index of the string in a line of code.</p>
+    and should not result in compile-time warnings or errors. These comments are of form <code>//$NON-NLS-n$</code>
+    where n is the 1-based index of the string in a line of code.</p>
     <p>Additional information about internationalized applications can be found
     in the following documents:</p>
 
