--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-11.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-11.htm
@@ -13,12 +13,11 @@
     <h1>Scrapbook</h1>
 
     <p>The JDT contributes a scrapbook facility that can be used to experiment and evaluate Java
-    code snippets before building a complete Java program.&nbsp; Snippets are edited and evaluated in the Scrapbook page
-    editor, with resultant problems reported in the editor.&nbsp;&nbsp;</p>
+    code snippets before building a complete Java program. Snippets are edited and evaluated in the Scrapbook page
+    editor, with resultant problems reported in the editor.</p>
 
-    <p>From a Java scrapbook editor, you can select a code snippet, evaluate it, and display the result as a string.&nbsp;
-    You can also show
-    the object that results from evaluating a code snippet in the debugger's expressions view.</p>
+    <p>From a Java scrapbook editor, you can select a code snippet, evaluate it, and display the result as a string.
+    You can also show the object that results from evaluating a code snippet in the debugger's expressions view.</p>
 
     <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
      <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a><br>
