--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-5.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-5.htm
@@ -11,7 +11,7 @@
   <body>
     <h1>Java perspectives</h1>
 
-    <p>The Java development tools contribute the following perspectives to the workbench.</p>
+    The Java development tools contribute the following perspectives to the workbench:
 
     <h2>Java</h2>
 
@@ -47,7 +47,7 @@
 
     <h2>Java Type Hierarchy</h2>
 
-    <p>A perspective designed for exploring a type hierarchy.&nbsp; It can be opened on types, compilation units, packages, projects or source folders and consists of the Hierarchy
+    <p>A perspective designed for exploring a type hierarchy. It can be opened on types, compilation units, packages, projects or source folders and consists of the Hierarchy
     view and an editor.</p>
 
     <h2>Debug</h2>
