--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-6.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-6.htm
@@ -15,10 +15,11 @@
 
     <h2>Package Explorer view</h2>
 
-    <p>The Package Explorer view shows the Java element hierarchy of the Java projects in your workbench. It provides you with a Java-specific view of the resources shown in the
-    Navigator. The element hierarchy is derived from the project's build class paths.</p>
-
-    <p>For each project, its source folders and referenced libraries are shown in the tree. You can open and browse the contents of both internal and external JAR files.</p>
+    <p>The Package Explorer view shows the Java element hierarchy of the Java projects in your workbench.
+    It provides you with a Java-specific view of the resources shown in the
+    Navigator. The element hierarchy is derived from the project's build class paths.
+    <br>For each project, its source folders and referenced libraries are shown in the tree.
+    You can open and browse the contents of both internal and external JAR files.</p>
 
     <h2>Hierarchy view</h2>
 
@@ -27,31 +28,34 @@
 
     <h2>Projects view</h2>
 
-    <p>The Projects view shows Java projects, source folders, external and internal libraries.</p>
-
-    <p>Note: source folders and libraries (both internal and external) presented in this view are not expandable. When they are selected, their contents are shown in the Packages
-    view.</p>
+    <p>The Projects view shows Java projects, source folders, external and internal libraries.
+    <br>
+    Note: source folders and libraries (both internal and external) presented in this view are not expandable.
+    When they are selected, their contents are shown in the Packages view.</p>
 
     <h2>Packages view</h2>
 
-    <p>The Packages view shows a list of Java packages from the currently selected Java projects, source folders or libraries. Typically, the Projects view is used to make this
-    selection.<br>
+    <p>The Packages view shows a list of Java packages from the currently selected Java projects, source folders or libraries.
+    Typically, the Projects view is used to make this selection.
     </p>
 
     <h2>Types view</h2>
 
-    <p>The Types view shows a list of Java types from the currently selected packages. Typically, the Packages view is used to make this selection.<br>
+    <p>The Types view shows a list of Java types from the currently selected packages.
+    Typically, the Packages view is used to make this selection.
     </p>
 
     <h2>Members view</h2>
 
-    <p>The Members shows the content of a type, compilation unit or CLASS file. Typically, the Types view is used to make this selection.</p>
+    <p>The Members shows the content of a type, compilation unit or CLASS file.
+    Typically, the Types view is used to make this selection.
+    </p>
 
     <p><img width="159" height="27" src="../images/ngrelc.gif" alt="Related concepts" border="0"><br>
      <a href="../concepts/concepts-5.htm">Java perspectives</a></p>
 
     <p><img border="0" width="159" height="27" src="../images/ngrelt.gif" alt="Related tasks"><br>
-     <a href="../tasks/tasks-10.htm">Changing the appearance of the console view</a><br>
+     <a href="../tasks/tasks-10.htm">Changing the appearance of the Console view</a><br>
      <a href="../tasks/tasks-38.htm">Changing the appearance of the Hierarchy view</a></p>
 
     <p><img border="0" width="159" height="27" src="../images/ngrelr.gif" alt="Related reference"><br>
