--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-8.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-8.htm
@@ -11,8 +11,10 @@
   <body>
     <h1>Java search</h1>
 
-    <p><span>The Java searching support allows you to find declarations and references of Java elements (packages, types, methods, fields). Searching is supported by an index that
-    is kept up to date in the background as the resources corresponding to Java elements are changed. The Java search operates on workspaces independent of their build state. For
+    <p><span>The Java searching support allows you to find declarations and references of Java elements
+    (packages, types, methods, fields). Searching is supported by an index that
+    is kept up to date in the background as the resources corresponding to Java elements are changed.
+    The Java search operates on workspaces independent of their build state. For
     example, searches can be conducted when auto-build is turned off.</span></p>
 
     <p>The following searches can be initiated from the pop-up menus of Java elements:</p>
@@ -63,7 +65,7 @@
 
         <tr>
           <td valign="top">
-            <p>Read access</p>
+            <p>Read Access</p>
           </td>
 
           <td valign="top">
@@ -73,7 +75,7 @@
 
         <tr>
           <td valign="top">
-            <p>Write access</p>
+            <p>Write Access</p>
           </td>
 
           <td valign="top">
