--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-3.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-3.htm
@@ -12,10 +12,11 @@
     <h1>Java projects</h1>
 
     <p>A Java project contains source code and related files for building a Java
-    program.&nbsp; It has an associated Java builder that can incrementally compile Java source files as they are changed.</p>
+    program. It has an associated Java builder that can incrementally compile Java source files as they are changed.</p>
 
-    <p>A Java project also maintains a model of its contents.&nbsp; This model
-    includes information about the type hierarchy, references and declarations of Java elements. This information is constantly updated as the user changes
+    <p>A Java project also maintains a model of its contents. This model
+    includes information about the type hierarchy, references and declarations of Java elements.
+    This information is constantly updated as the user changes
     the Java source code. The updating of the internal Java project model is independent of the
     Java builder.</p>
 
@@ -33,14 +34,14 @@
      <a href="../concepts/concepts-9.htm">Refactoring support</a></p>
 
     <p><img border="0" width="159" height="27" src="../images/ngrelt.gif" alt="Related tasks"><br>
-     <a href="../tasks/tasks-85.htm">Copying and moving Java elements</a><br>
-     <a href="../tasks/tasks-11.htm">Creating Java elements</a><br>
+     <a href="../tasks/tasks-12.htm">Creating a new Java project</a><br>
      <a href="../tasks/tasks-13.htm">Creating a Java project as its own source container</a><br>
      <a href="../tasks/tasks-14.htm">Creating a Java project with source folders</a><br>
      <a href="../tasks/tasks-26.htm">Creating a new source folder</a><br>
-     <a href="../tasks/tasks-47.htm">Filtering elements</a><br>
+     <a href="../tasks/tasks-11.htm">Creating Java elements</a><br>
+     <a href="../tasks/tasks-85.htm">Copying and moving Java elements</a><br>
      <a href="../tasks/tasks-57.htm">Generating getters and setters</a><br>
-     <a href="../tasks/tasks-12.htm">Creating a new Java project</a><br>
+     <a href="../tasks/tasks-47.htm">Filtering elements</a><br>
     </p>
 
     <p><img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
