--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-4.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-4.htm
@@ -13,8 +13,7 @@
     <h1>Java builder</h1>
 
     <p>The Java builder builds Java programs using a compiler that implements the Java Language Specification.&nbsp;
-    The Java builder can build programs incrementally as individual Java files
-    are saved.&nbsp;&nbsp;</p>
+    The Java builder can build programs incrementally as individual Java files are saved.</p>
 
     <p>Problems detected by the compiler are classified as either warnings or errors. The existence of a warning does not affect the execution of the program; the code executes as
     if it were written correctly. Compile-time errors (as specified by the Java Language Specification) are always reported as errors by the Java compiler. For some other types of
@@ -30,15 +29,16 @@
      <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></p>
 
     <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
-     <a href="../tasks/tasks-113.htm">Adding a JAR file to the build path</a><br>
-     <a href="../tasks/tasks-112.htm">Adding a library folder to the build path</a><br>
      <a href="../tasks/tasks-106.htm">Building a Java program</a><br>
      <a href="../tasks/tasks-108.htm">Building automatically</a><br>
      <a href="../tasks/tasks-109.htm">Building manually</a><br>
-     <a href="../tasks/tasks-111.htm">Viewing and editing a project's build path</a><br>
      <a href="../tasks/tasks-107.htm">Viewing compilation errors and warnings</a><br>
-     <a href="../tasks/tasks-110.htm">Working with build paths</a></p>
-
+     <a href="../tasks/tasks-110.htm">Working with build paths</a>
+     <a href="../tasks/tasks-111.htm">Viewing and editing a project's build path</a><br>
+     <a href="../tasks/tasks-113.htm">Adding a JAR file to the build path</a><br>
+     <a href="../tasks/tasks-112.htm">Adding a library folder to the build path</a><br>
+	</p>
+	
     <p><img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
      <a href="../reference/ref-123.htm">Java Build Path properties</a><br>
      <a href="../reference/ref-preferences-compiler.htm">Java Compiler preferences</a></p>
