--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-7.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-7.htm
@@ -11,33 +11,38 @@
   <body>
     <h1>Java editor</h1>
 
-    <p>The Java tools provide an editor that provides specialized features editing Java code.</p>
+    <p>The Java editor provides specialized features for editing Java code.</p>
 
-    <p>The editor is associated with the Java-specific Outline view, which shows the structure of the active Java compilation unit. It is updated as the user edits the compilation
-    unit.</p>
+    <p>Associated with the editor is a Java-specific Outline view, which shows the structure of the active Java compilation unit.
+    It is updated as the user edits the compilation unit.</p>
 
-    <p>The Java editor can be opened on binary CLASS files. If a JAR file containing the CLASS files has a source attachment, then the editor shows the corresponding source.</p>
+    <p>The Java editor can be opened on binary CLASS files.
+    If a JAR file containing the CLASS files has a source attachment,
+    then the editor shows the corresponding source.</p>
 
     <p>The editor includes the following features:</p>
 
     <ul>
-      <li><span>Syntax highlighting</span></li>
+      <li>Syntax highlighting</li>
 
-      <li><span>Content/code assist</span></li>
+      <li>Content/code assist</li>
 
-      <li><span>Code formatting</span></li>
+      <li>Code formatting</li>
 
-      <li><span>Import assistance</span></li>
+      <li>Import assistance</li>
+      
+      <li>Quick fix</li>
 
-      <li><span>Integrated debugging features</span></li>
+      <li>Integrated debugging features</li>
     </ul>
 
-    <p><span>The Java editor can be configured to either show an entire compilation unit or a single Java element only. To change the setting, use the toolbar button <span class=
-    "control">Show Source of Selected Element Only</span>.</span></p>
+    <p>The Java editor can be configured to either show an entire compilation unit or a single Java element only.
+    To change the setting, use the toolbar button <span class="control">Show Source of Selected Element Only</span>.
+    </p>
 
     <p>The most common way to invoke the Java editor is to open a Java file from
     the Navigator or Package explorer using pop-up menus or by clicking the file
-    (single or double-click depending on the user preferences).&nbsp; You can
+    (single or double-click depending on the user preferences). You can
     also open the editor by opening Java elements, such as types, methods, or
     fields, from other views.</p>
 
@@ -45,22 +50,23 @@
      <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></p>
 
     <p><img border="0" width="159" height="27" src="../images/ngrelt.gif" alt="Related tasks"><br>
-     <a href="../tasks/tasks-59.htm">Adding required import statements</a><br>
-     <a href="../tasks/tasks-138.htm">Evaluating expressions</a><br>
-     <a href="../tasks/tasks-66.htm">Formatting Java code</a><br>
-     <a href="../tasks/tasks-57.htm">Generating getters and setters</a><br>
-     <a href="../tasks/tasks-130.htm">Launching a Java program</a><br>
      <a href="../tasks/tasks-73.htm">Opening an editor for a selected element</a><br>
-     <a href="../tasks/tasks-65.htm">Using content/code assist</a><br>
      <a href="../tasks/tasks-54.htm">Using the Java editor</a><br>
+     <a href="../tasks/tasks-65.htm">Using content/code assist</a><br>
+     <a href="../tasks/tasks-66.htm">Formatting Java code</a><br>
+     <a href="../tasks/tasks-59.htm">Adding required import statements</a><br>
+     <a href="../tasks/tasks-57.htm">Generating getters and setters</a><br>
      <a href="../tasks/tasks-107.htm">Viewing compilation errors and warnings</a><br>
-     <a href="../tasks/tasks-156.htm">Viewing runtime exceptions</a></p>
+     <a href="../tasks/tasks-156.htm">Viewing runtime exceptions</a><br>
+     <a href="../tasks/tasks-138.htm">Evaluating expressions</a><br>
+    </p>
 
     <p><img border="0" width="159" height="27" src="../images/ngrelr.gif" alt="Related reference"><br>
      <a href="../reference/ref-java-editor.htm">Java editor actions</a><br>
      <a href="../reference/ref-21.htm">Java editor preferences</a><br>
      <a href="../reference/ref-view-outline.htm">Outline view for Java</a><br>
-     <a href="../reference/ref-24.htm">Views and editors</a></p>
+     <a href="../reference/ref-24.htm">Views and editors</a>
+    </p>
 
     <p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a></p>
   </body>
