removed incorrect dims for new gif

--- a/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
+++ b/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
@@ -314,8 +314,7 @@ to if we had a "Tip of the Day" facility).]</p><p></p>
 			private types, methods and fields<br>
 			The setting is on the <b>Java / Compiler</b> preference page.
 
-			<p><img border="0" src="images/warn-privates.gif" width="327"
-				height="349"><br>
+			<p><img border="0" src="images/warn-privates.gif" ><br>
 			All these settings are also detected as you type and a quick fix is
 			offered to remove the unneeded code.</p>
 			</td>
