1st pass over tasks

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-100.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-100.htm
@@ -14,14 +14,16 @@
       Undoing a refactoring operation
     </h1>
     <p>
-      The most recent refactoring can be undone as long as you have not modified any Java elements in the workbench. After performing a refactoring operation, you can build the
+      The most recent refactoring can be undone as long as you have not modified any Java elements in the workbench.
+      After performing a refactoring operation, you can build the
       project, run and debug it, and execute any test cases, and still undo the refactoring action.
     </p>
     <p>
       To undo the most recent refactoring, select <strong>Refactor</strong> &gt; <strong>Undo</strong> from the menu bar.
     </p>
     <p>
-      <strong>Note</strong>: If the workbench contains unsaved files that affect undoing the refactoring, an error dialog appears. The dialog contains a list of files that must be
+      <strong>Note</strong>: If the workbench contains unsaved files that affect undoing the refactoring, an error dialog appears.
+      The dialog contains a list of files that must be
       reverted to their saved editions before the refactoring can be completed.
     </p>
     <p>
