--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-103.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-103.htm
@@ -15,7 +15,7 @@
       Conducting a Java search using the Search dialog
     </h1>
     <p>
-      Java searching allows you to quickly find references to and declarations of Java elements.
+      Java search allows you to quickly find references to and declarations of Java elements.
     </p>
     <ul>
       <li>
@@ -28,7 +28,7 @@
             Pressing <strong>Ctrl+H</strong> or
           </li>
           <li>
-            Selecting <strong>Search &gt; Search</strong> from the menu bar.
+            Selecting <strong>Search &gt; Search...</strong> from the menu bar.
           </li>
         </ul>
       </li>
@@ -36,7 +36,7 @@
         Select the <strong>Java Search</strong> tab.
       </li>
       <li>
-        In the <strong>Search String</strong> field, type the string for which you want to search, using wildcards as needed.
+        In the <strong>Search string</strong> field, type the string for which you want to search, using wildcards as needed.
       </li>
       <li>
         You can also choose a previous search expression from the drop-down list. Selecting a previous search expression restores all values associated with that previous search
@@ -64,7 +64,6 @@
       <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159">
     </p>
     <p>
-      <a href="tasks-103.htm">Conducting a Java search using the search dialog</a><br>
        <a href="tasks-104.htm">Conducting a Java search using pop-up menus</a>
     </p>
     <p>
