--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-104.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-104.htm
@@ -21,12 +21,13 @@
         Search, Outline, and Hierarchy views: The selected Java element in these views can be searched for declarations and references.
       </li>
       <li>
-        Package Explorer: Packages, Java compilation units, types and their members can be searched for declarations and references. If a compilation unit or CLASS file contains
+        Package Explorer: Packages, Java compilation units, types and their members can be searched for declarations and references.
+        If a compilation unit or CLASS file contains
         more than one type, a dialog prompts you to choose one.
       </li>
     </ul>
-    The search pop-up menu is also available in the Java editor. If the selection in the Java editor can be resolved to a Java element, then you can search for declarations and
-    references. 
+    The search pop-up menu is also available in the Java editor. If the selection in the Java editor can be resolved to a Java element,
+	then you can search for declarations and references. 
     <p>
       To conduct a search from a pop-up menu, follow these steps:
     </p>
