--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-107.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-107.htm
@@ -13,7 +13,7 @@
       Viewing compilation errors and warnings
     </h1>
     <p>
-      The workbench supports different ways to examine errors and warnings.
+      The workbench supports different ways to examine errors and warnings:
     </p>
     <ul>
       <li>
