--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-110.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-110.htm
@@ -27,7 +27,8 @@
       <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159">
     </p>
     <p>
-      <a href="tasks-113.htm">Adding a JAR file to the build path</a><br>
+       <a href="tasks-111.htm">Viewing and editing a project's build path</a><br>
+       <a href="tasks-113.htm">Adding a JAR file to the build path</a><br>
        <a href="tasks-112.htm">Adding a library folder to the build path</a><br>
        <a href="tasks-31.htm">Adding source code as individual files</a><br>
        <a href="tasks-120.htm">Assigning the default JRE for the workbench</a><br>
@@ -35,7 +36,6 @@
        <a href="tasks-108.htm">Building automatically</a><br>
        <a href="tasks-109.htm">Building manually</a><br>
        <a href="tasks-124.htm">Choosing a JRE for launching a project</a><br>
-       <a href="tasks-111.htm">Viewing and editing a project's build path</a>
     </p>
     <p>
       <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
