--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-108.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-108.htm
@@ -34,13 +34,13 @@
       <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159">
     </p>
     <p>
-      <a href="tasks-113.htm">Adding a JAR file to the build path</a><br>
-       <a href="tasks-112.htm">Adding a library folder to the build path</a><br>
-       <a href="tasks-106.htm">Building a Java program</a><br>
-       <a href="tasks-109.htm">Building manually</a><br>
-       <a href="tasks-111.htm">Viewing and editing a project's build path</a><br>
-       <a href="tasks-107.htm">Viewing compilation errors and warnings</a><br>
-       <a href="tasks-110.htm">Working with build paths</a>
+		<a href="tasks-106.htm">Building a Java program</a><br>
+		<a href="tasks-109.htm">Building manually</a><br>
+		<a href="tasks-107.htm">Viewing compilation errors and warnings</a><br>
+		<a href="tasks-110.htm">Working with build paths</a><br>
+		<a href="tasks-113.htm">Adding a JAR file to the build path</a><br>
+		<a href="tasks-112.htm">Adding a library folder to the build path</a><br>
+		<a href="tasks-111.htm">Viewing and editing a project's build path</a><br>
     </p>
     <p>
       <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
