--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-109.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-109.htm
@@ -67,12 +67,12 @@
       <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159">
     </p>
     <p>
-      <a href="tasks-113.htm">Adding a JAR file to the build path</a><br>
-       <a href="tasks-112.htm">Adding a library folder to the build path</a><br>
        <a href="tasks-106.htm">Building a Java program</a><br>
        <a href="tasks-108.htm">Building automatically</a><br>
+       <a href="tasks-110.htm">Working with build paths</a><a href="tasks-110.htm"></a><br>
+       <a href="tasks-113.htm">Adding a JAR file to the build path</a><br>
+       <a href="tasks-112.htm">Adding a library folder to the build path</a><br>
        <a href="tasks-111.htm">Viewing and editing a project's build path</a><br>
-       <a href="tasks-110.htm">Working with build paths</a><a href="tasks-110.htm"></a>
     </p>
     <p>
       <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
