--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-11.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-11.htm
@@ -24,16 +24,16 @@
       <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159">
     </p>
     <p>
-      <a href="tasks-114.htm">Adding a variable class path entry</a><br>
-       <a href="tasks-85.htm">Copying and moving Java elements</a><br>
+       <a href="tasks-12.htm">Organizing Java projects</a><br>
        <a href="tasks-13.htm">Creating a Java project as its own source container</a><br>
        <a href="tasks-14.htm">Creating a Java project with source folders</a><br>
        <a href="tasks-26.htm">Creating a new source folder</a><br>
        <a href="tasks-15.htm">Creating a new Java package</a><br>
        <a href="tasks-17.htm">Creating a new Java class</a> <a href="tasks-21.htm">Creating a new Java interface</a><br>
        <a href="tasks-149.htm">Creating a Java scrapbook page</a><br>
+       <a href="tasks-114.htm">Adding a variable class path entry</a><br>
+       <a href="tasks-85.htm">Copying and moving Java elements</a><br>
        <a href="tasks-117.htm">Defining a class path variable</a><br>
-       <a href="tasks-12.htm">Organizing Java projects</a>
     </p>
     <p>
       <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159">
