new image for linked rename

--- a/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
+++ b/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
@@ -299,8 +299,8 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
       errors.</FONT> 
       <UL>
         <LI><FONT face=Verdana size=2>Linked rename: Available on all identifiers.</FONT> 
-          <P align=left><FONT face=Verdana size=2><IMG height=239 
-        src="images/linkedrename.gif" width=466 border=1> 
+          <P align=left><FONT face=Verdana size=2><IMG 
+        src="images/quick-fix-localrename.gif"> 
         <BR><BR>Switches into the editor linked mode editing (like templates), 
         where changing the identifier changes all occurrences of that name 
         within the source file.</FONT> </P>
